# ghostpost_backend

./: README.md  db.sqlite3  pyproject.toml
api/: serializers.py  views.py
ghostpost/: settings.py  urls.py
post/: admin.py  models.py
post/migrations/: 0001_initial.py  0002_auto_20200929_1559.py  0003_auto_20200929_1646.py
